--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,14 +1,9 @@
-<div class="t-hackcss-navigation">
-  <h2>Menu</h2>
-
-  <nav class="menu" role="menubar">
-    {% assign url = page.url|remove:'index.html' %}
-    {% for link in site.navigation %}
-      <a class="menu-item {% if url == link.url %}active{% endif %}"
-        role="menuitem" href="{{ link.url }}" title="{{ link.title }}">
-        {{ link.text }} <div class="pull-right">»</div>
-      </a>
-    {% endfor %}
-  </nav>
-
-</div>
+<nav id="main-navigation">
+  {% for link in site.data.links %}
+  {% if page.title == link.title %}
+  <a href="{{ link.url }}" title="{{ link.title }}" class="current">{{ link.title }}</a>
+  {% else %}
+  <a href="{{ link.url }}" title="{{ link.title }}">{{ link.title }}</a>
+  {% endif %}
+  {% endfor %}
+</nav>
