--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    {% include head.html %}
+  </head>
+  <body>
+    <main class="container {% if site.color_scheme %}{{ site.color_scheme }}{% else %}avocado{% endif %}">
+      {% if page.title == "Home" %}
+      <header class="fadeInLeft animated">
+      {% else %}
+      <header>
+      {% endif %}
+        <div>
+          <a href="{{ site.url }}" id="logo" title="{{ site.title }}"
+             style="background-image: url({{ '/assets/images/logo.png' | relative_url }});"></a>
+        </div>
 
-  {% include head.html %}
+        {% include navigation.html %}
+      </header>
 
+      {{ content }}
 
-  {% if site.theme_mode == 'markdown' %}
-  <body class="hack">
-  {% elsif site.theme_mode == 'standard' %}
-  <body class="standard">
-  {% elsif site.theme_mode == 'dark' %}
-  <body class="hack dark">
-  {% endif %}
+      <footer>
+        <p>
+          This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/deed.en_US">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
+        </p>
+      </footer>
+    </main>
 
-    {% include github-ribbon.html %}
-
-    <div class="container">
-      <div class="grid">
-        <aside class="cell -3of12" role="navigation">
-          {% include navigation.html %}
-        </aside>
-
-        <main class="cell -9of12">
-          {{ content }}
-        </main>
-      </div>
-
-    {% include footer.html %}
-
-    </div>
+    <!-- scripts -->
+    <script src="{{ '/assets/js/fluidvids.min.js' | relative_url }}"></script>
+    <script>
+      fluidvids.init({
+        selector: ['iframe', 'object'],
+        players: ['www.youtube.com', 'player.vimeo.com']
+      });
+    </script>
   </body>
-
 </html>
